# NEKO-translate

./: AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
cat_translate/: cli.py  pdf_cli.py
neko_translate/: cli.py  translation_models.py
scripts/: to_mlx.py  translate.py
tests/: test_integration_mlx.py  test_smoke.py  test_translation_models.py
